# QCmaps

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
QCmaps/: io.py  plot.py
QCmaps/data/: el_zones_raew.geojson
examples/: generate_map_plot.ipynb  reference_2024Q4_1991.xlsx
qcmaps/: __init__.py  plot.py
